# voxelgl

./: .gitignore  CMakeLists.txt  CMakePresets.json
assets/shaders/: voxel.frag  voxel.vert
include/voxelgl/: App.h
scripts/: build.sh
src/: main.cpp
src/app/: App.cpp  Camera.cpp  Camera.h  app.h
src/app/action/: action.cpp  action.h  input_action.cpp  input_action.h
src/app/character/: character.h
src/app/world/: Cell.cpp  Cell.h  Sector.cpp  Sector.h  World.cpp  World.h  grid.h  hit_result.h  metrics.h
src/core/: types.h  utils.h
src/platform/: InputSystem.cpp  InputSystem.h  WindowSystem.cpp  WindowSystem.h  input.cpp  input.h  input_system.cpp  input_system.h  window.cpp  window.h  window_system.cpp  window_system.h
src/render/: GpuMesh.h  Renderer.cpp  Renderer.h  SectorMesh.h  VertexData.h  VoxelData.h  VoxelMesh.h  block_render_data.h  gl_utils.h  gpu_mesh.h  sector_mesh.h  texture_utils.h  utils.h  vertex_data.h  voxel_data.h
src/utils/: cglm_utils.h  file_utils.h  gl_utils.h  shader_utils.h  stb_utils.h
